# tailor-resume-with-ai

./: .clinerules  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Fetched_JD.md  Gaps_Analysis.md  Improved_Resume.md  LICENSE  README.md  SECURITY.md  Tailoring_Analysis.md  app.py  gaps_analysis.md  implementation_guide.md  implementation_plan.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py  training_data.jsonl
.github/: dependabot.yml  pull_request_template.md
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
smart_resume_app/: .env.example  .gitignore  Updated_Resume.docx  app.py  gaps_analysis.md  requirements.txt  setup.cfg  setup.py  training_data.jsonl
src/: __init__.py  ats_scorer.py  batch_processor.py  cli.py  components.py  config.py  data_collection.py  data_collection.pyi  document_handler.py  exceptions.py  formatting.py  gaps_analysis.md  job_board.py  job_recommender.py  keyword_matcher.py  message_handler.py  model_improvements.md  model_selector.py  models.py  prompt_cache.py  realtime_processor.py  salary_analyzer.py  tailoring.py  training_collector.py  utils.py
static/: styles.css
templates/: app.html  index.html
tests/: __init__.py  conftest.py  test_data_collection.py  test_formatting.py  test_job_board.py  test_keyword_matcher.py  test_models.py
uploads/: Fetched_JD.md  Improved_Resume.md  Resume.docx  Resume.md  Resume_Vikram.docx  Tailored_Resume.md
(+33 files in other folders)
